# PoseGraph-Ceres

./: .gitignore  README.md
src/: world_pose.txt
src/ORB_SLAM2/: CMakeLists.txt  CameraTrajectory.txt  build_only.sh  run_00.sh  run_01.sh  run_02.sh  run_66.sh
src/ORB_SLAM2/3d-2dpairs/: 32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  46.txt  47.txt  48.txt  49.txt  50.txt  51.txt  53.txt  54.txt  55.txt  56.txt  57.txt  58.txt  59.txt  60.txt  61.txt  62.txt  63.txt  64.txt  65.txt  66.txt  67.txt  68.txt  69.txt  70.txt  71.txt  72.txt  (+14 more)
src/ORB_SLAM2/Examples/Monocular/: mono_euroc  mono_kitti  mono_tum
src/ORB_SLAM2/Examples/RGB-D/: rgbd_tum
src/ORB_SLAM2/Examples/Stereo/: stereo_euroc  stereo_kitti
src/ORB_SLAM2/Results/stero/: 00.txt  01.txt  03.txt  06.txt  08.txt
src/ORB_SLAM2/include/: Frame.h  FrameDrawer.h  ORBmatcher.h  Tracking.h
src/ORB_SLAM2/src/: Frame.cc  FrameDrawer.cc  GroundTruth.cpp  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  Tracking.cc  Viewer.cc
src/ORB_SLAM2_modified/Results/stero/: 02.txt  (+5 more)
src/ORB_SLAM2_modified/include/: FrameDrawer.h  GroundTruth.h  System.h
src/ORB_SLAM2_modified/src/: FrameDrawer.cc  GroundTruth.cpp  Tracking.cc  Viewer.cc
src/POSE_GRAPH/: CMakeLists.txt  README.md  build_Thirdparty.sh  camera_poses.txt  loop_frame_id.txt  loop_frame_id00.txt
src/POSE_GRAPH/config/: config.yaml  config02.yaml  config05.yaml  config08.yaml
src/POSE_GRAPH/include/: Frame.h  GroundTruth.h  MapPoint.h  ORBextractor.h  ORBmatcher.h  SequenceRun.h  camera.h  common_include.h  config.h  converter.h  frame.h
src/POSE_GRAPH/result/: result_after.g2o  result_before.g2o
src/POSE_GRAPH/result/g2o/: 00.g2o  02.g2o  111  result_after.g2o  result_after0920_00.g2o  result_after_suscessfully.g2o  result_before.g2o  result_before_suscessfully.g2o  suscess
src/POSE_GRAPH/src/: Frame.cc  GroundTruth.cc  GroundTruth.cpp  MapPoint.cc  ORBmatcher.cc  SequenceRun.cc  Tracking.cc  camera.cc  camera.cpp  converter.cc  converter.cpp
src/POSE_GRAPH/test/: feature_match.cpp  feature_match2.cpp  frame_test.cpp  param_reader.cpp  pose_graph_try1.cpp  pose_graph_try1_backup.cpp  pose_graph_try2.cpp  pose_graph_try3.cpp
src/POSE_GRAPH_CERES/: CMakeLists.txt  README.md  camera_poses.txt  loop_frame_id.txt  plot.sh  pose_graph.txt
src/POSE_GRAPH_CERES/config/: config08.yaml
src/POSE_GRAPH_CERES/include/: Frame.h  ORBmatcher.h  PoseGraph3dError.h  SequenceRun.h  Tracking.h  camera.h  converter.h  types.h
src/POSE_GRAPH_CERES/path_plot/: plot00.sh  plot00_new.sh  plot02.sh  plot08.sh  pose_graph00.txt  pose_graph02.txt
src/POSE_GRAPH_CERES/result/g2o/: 08.g2o  2222  333  result_after.g2o  result_before.g2o
src/POSE_GRAPH_CERES/src/: Frame.cc  ORBmatcher.cc  SequenceRun.cc  config.cc  converter.cc
src/POSE_GRAPH_CERES/test/: feature_match.cpp  match_test2.cpp  pose_graph_ceres.cpp  pose_graph_ceres_back_up.cpp  pose_graph_try1.cpp
src/POSE_GRAPH_CERES_PLUS/: CMakeLists.txt  README.md  camera_poses.txt
src/POSE_GRAPH_CERES_PLUS/config/: Edge_Candidates_index.txt  config.yaml  config00.yaml  config05.yaml
src/POSE_GRAPH_CERES_PLUS/include/: Frame.h  GroundTruth.h  ImageRead.h  MotionEstimate.h  ORBmatcher.h  PoseGraph3dError.h  ReadEdges.h  SequenceRun.h  camera.h  common_include.h  config.h  converter.h  types.h
src/POSE_GRAPH_CERES_PLUS/path_plot/: plot00.sh  pose_graph.txt  pose_graph00_before.txt  pose_graph02_before.txt  pose_graph08_before.txt
src/POSE_GRAPH_CERES_PLUS/result/: README.md  motionestimate.txt
src/POSE_GRAPH_CERES_PLUS/result/Edges/: edges_for_loop.txt
src/POSE_GRAPH_CERES_PLUS/result/PlotShow/: README.md  path_plot_x_z.py  path_plot_z_y.py  plot.sh  plot_pose_graph.py
src/POSE_GRAPH_CERES_PLUS/result/trajectory/: trajectory_origin.txt  trajectory_update.txt  trajectory_update_y_not_constant.txt
src/POSE_GRAPH_CERES_PLUS/src/: Frame.cc  GroundTruth.cc  ImageRead.cc  MotionEstimate.cc  ORBextractor.cc  ORBmatcher.cc  SequenceRun.cc  camera.cc  converter.cc
src/POSE_GRAPH_CERES_PLUS/test/: README.md  fake_loop_generate.cpp  feature_match.cpp  feature_match2.cpp  frame_test.cpp  generate_edges_from_trajectory_origion.cpp  match_test.cpp  match_test2.cpp  motionestimate.cpp  motionestimate_wholesequence.cpp  pose_graph_ceres.cpp  pose_graph_ceres_0923backup.cpp  pose_graph_ceres_plus.cpp  pose_graph_ceres_plus_finial.cpp  pose_graph_try1.cpp  pose_graph_try2.cpp  pose_graph_try3.cpp  read_loop_edges_test.cpp
src/VISO++/: CMakeLists.txt
src/VISO++/include/: camera.h  common_include.h  g2o_types.h  matcher.h  viso_stereo.h
src/VISO++/src/: CMakeLists.txt  config.cpp  converter.cpp  demo.cpp  g2o_types.cpp  matcher.cpp  visual_odometry.cpp
src/VISO++/test/: param_readtest.cpp
src/VISO2/: CMakeLists.txt  camera_poses.txt
src/VISO2+/: CMakeLists.txt  README.md  camera_pose.txt  camera_poses.txt
src/VISO2+/builld/: CMakeCache.txt  Makefile  cmake_install.cmake
src/VISO2+/builld/src/: Makefile  cmake_install.cmake
src/VISO2+/builld/test/: Makefile  cmake_install.cmake
src/VISO2+/config/: KITTI00-02.yaml  default.yaml
src/VISO2+/include/: camera.h  common_include.h  config.h  converter.h  frame.h  map.h  mappoint.h  matcher.h  matrix.h  new_matcher.h  optimizer.h  reconstruction.h  tracking.h  viso.h  viso_mono.h  viso_stereo.h  visual_odometry.h
src/VISO2+/src/: CMakeLists.txt  GroundTruth.cpp  camera.cpp  config.cpp  converter.cpp  demo.cpp  frame.cpp  map.cpp  mappoint.cpp  matcher.cpp  matrix.cpp  new_matcher.cpp  optimizer.cpp  reconstruction.cpp  tracking.cpp  viso.cpp  viso_mono.cpp  viso_stereo.cpp  visual_odometry.cpp
src/VISO2+/test/: CMakeLists.txt  param_readtest.cpp  rotation_test.cpp  testvo2.cpp  testvo3.cpp  visotest1.cpp
src/VISO2+/testvo/: CMakeLists.txt  vo0_1.cpp  vo0_2.cpp  vo0_3.cpp
src/VISO2/src/: GroundTruth.h  demo.cpp  matcher.cpp  matcher.h  viso.cpp  viso_stereo.h
src/other_projects/bundle_adjustment/: CMakeLists.txt  ReprojectionError.h  bundle_adjustment.cpp  ceres_extensions.h  projection.h
(+9 files in other folders)
